--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MyOwnEdits",
+  "name": "Flame-QoL",
   "author": "FlaMe",
   "description": "Why am I alive?",
   "license": "WTFPL",
